--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
 <body>
     <h1>About Page</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, quos? Consequuntur consectetur aliquam enim, qui magnam ex quisquam reprehenderit fugiat? Laboriosam, quidem voluptatum. Eius soluta, ipsa enim aliquam adipisci magni eaque aut, tenetur qui quam quos fugit, ut numquam id laborum inventore unde non doloremque. Voluptatem culpa dicta, illum natus tempora sed ab ipsam, possimus laborum excepturi ipsum saepe quae explicabo doloribus alias amet officiis quis neque vel? Quia, nisi reprehenderit, ducimus, placeat eius dolor id dolore laudantium ut commodi quibusdam libero. Necessitatibus impedit corporis, voluptate possimus eaque excepturi! Quis voluptatum libero ex odio nihil officiis sequi laudantium placeat obcaecati!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit esse eos, cupiditate obcaecati molestias cum fugiat harum quo pariatur numquam?</p>
     
 </body>
 </html>
